--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
         <div class="--projects-backend-container">
           <div id="projects-backend-item1" class="--projects-backend-wrapper">
             <h3 class="--projects-backend-title">RPG Battle API</h3>
+            <a href="https://github.com/ecureuill/adopet"><img alt="Project's Github repository"
+                src="./assets/img/github.png" /></a>
             <div class="--projects-backend-keywords">
               <ul class="keywords list-horizontal" title="used technologies">
                 <li>java 17</li>
@@ -161,11 +163,12 @@
                 <li>postgresql</li>
               </ul>
             </div>
-            <a href="https://github.com/ecureuill/adopet"><img alt="Project's Github repository"src="./assets/img/github.png"/></a>
           </div>
           
           <div id="projects-backend-item2" class="--projects-backend-wrapper">
             <h3 class="--projects-backend-title">Adopete API</h3>
+            <a href="https://github.com/ecureuill/rpgbattle"><img alt="Project's Github repository"
+                src="./assets/img/github.png" /></a>
             <div class="--projects-backend-keywords">
               <ul class="keywords list-horizontal --projects-backend-keywords" title="used technologies">
               <li>nodejs</li>
@@ -175,11 +178,12 @@
               <li>jsonwebtoken</li>
             </ul>
           </div>
-            <a href="https://github.com/ecureuill/rpgbattle"><img alt="Project's Github repository"src="./assets/img/github.png"/></a>
           </div>
 
           <div id="projects-backend-item3" class="--projects-backend-wrapper">
             <h3 class="--projects-backend-title">milhas api</h3>
+            <a href="https://github.com/ecureuill/milhasapi"><img alt="Project's Github repository"
+                src="./assets/img/github.png" /></a>
             <div class="--projects-backend-keywords">
               <ul class="keywords list-horizontal" title="used technologies">
                 <li>java 17</li>
@@ -190,7 +194,6 @@
                 <li>open-ai</li>
               </ul>
             </div>
-            <a href="https://github.com/ecureuill/milhasapi"><img alt="Project's Github repository"src="./assets/img/github.png"/></a>
           </div>
         </div>
       </article>
