💄 Update carousel layout

--- a/index.html
+++ b/index.html
@@ -210,6 +210,11 @@
             <div class="--carousel-items" aria-live="off" aria-live="polite">
               <div id="projects-frontend-carousel-item1" class="--carousel-item active" role="group" aria-roledescription="slide" aria-label="1 of 4">
                 <div class="--carousel-content">
+                  <div class="--carousel-image">
+                    <a href="https://github.com/ecureuill/adopet-app">
+                      <img src="./assets/img/adopet.png"/>
+                    </a>
+                  </div>
                   <div class="--carousel-caption">
                     <p class="--carousel-description">
                       Adopet App is the result of the Alura Front-end Challenge, developed based on the provided Figma design. The project showcases the skills and knowledge acquired during the challenge.
@@ -220,16 +225,16 @@
                       <li>vanilla css</li><li>react framework</li>
                     </ul>
                   </div>
-                  <div class="--carousel-image">
-                    <a href="https://github.com/ecureuill/adopet-app">
-                      <img src="./assets/img/adopet.png"/>
-                    </a>
-                  </div>
                 </div>
               </div>
 
               <div id="projects-frontend-carousel-item2" class="--carousel-item" role="group" aria-roledescription="slide" aria-label="2 of 4">
                 <div class="--carousel-content">
+                  <div class="--carousel-image">
+                    <a href="https://github.com/ecureuill/meteora">
+                      <img src="./assets/img/meteora.png"/>
+                    </a>
+                  </div>
                   <div class="--carousel-caption">
                     <p class="--carousel-description">
                       Meteora is the result of the Alura Front-end Challenge, developed based on the provided Figma design. The project showcases the skills and knowledge acquired during the challenge.
@@ -240,16 +245,16 @@
                       <li>vanilla css</li><li>react framework</li>
                     </ul>
                   </div>
-                  <div class="--carousel-image">
-                    <a href="https://github.com/ecureuil/meteora">
-                      <img src="./assets/img/meteora.png"/>
-                    </a>
-                  </div>
                 </div>
               </div>
 
               <div id="projects-frontend-carousel-item3" class="--carousel-item" role="group" aria-roledescription="slide" aria-label="3 of 4">
                 <div class="--carousel-content">
+                  <div class="--carousel-image">
+                    <a href="https://github.com/ecureuill/matching-game/">
+                      <img src="./assets/img/matching-game.png"/>
+                    </a>
+                  </div>
                   <div class="--carousel-caption">
                     <p class="--carousel-description">
                       As a study project, I developed an accessible web-based matching game that adheres to the WCAG 2.1 Level A. 
@@ -259,17 +264,17 @@
                       <li>react framework</li>
                     </ul>
                   </div>
-                  <div class="--carousel-image">
-                    <a href="https://github.com/ecureuil/matching-game">
-                      <img src="./assets/img/matching-game.png"/>
-                    </a>
-                  </div>
                 </div>
               </div>
             </div>
 
             <div id="projects-frontend-carousel-item4" class="--carousel-item" role="group" aria-roledescription="slide" aria-label="4 of 4">
                 <div class="--carousel-content">
+                  <div class="--carousel-image">
+                    <a href="https://github.com/ecureuill/codechela">
+                      <img src="./assets/img/codechela.png"/>
+                    </a>
+                  </div>
                   <div class="--carousel-caption">
                     <p class="--carousel-description">
                       Codechela is the result of the Alura Front-end Challenge, developed based on the provided Figma design. The project showcases the skills and knowledge acquired during the challenge.
@@ -280,11 +285,6 @@
                       <li>mobile-first approach</li>
                       <li>vanilla css</li><li>react framework</li>
                     </ul>
-                  </div>
-                  <div class="--carousel-image">
-                    <a href="https://github.com/ecureuil/codechela">
-                      <img src="./assets/img/codechela.png"/>
-                    </a>
                   </div>
                 </div>
               </div>
