--- a/index.html
+++ b/index.html
@@ -271,13 +271,13 @@
             <div id="projects-frontend-carousel-item4" class="--carousel-item" role="group" aria-roledescription="slide" aria-label="4 of 4">
                 <div class="--carousel-content">
                   <div class="--carousel-image">
-                    <a href="https://github.com/ecureuill/codechela">
-                      <img src="./assets/img/codechela.png"/>
+                    <a href="https://github.com/ecureuill/codechella">
+                      <img src="./assets/img/codechella.png"/>
                     </a>
                   </div>
                   <div class="--carousel-caption">
                     <p class="--carousel-description">
-                      Codechela is the result of the Alura Front-end Challenge, developed based on the provided Figma design. The project showcases the skills and knowledge acquired during the challenge.
+                      Codechella is the result of the Alura Front-end Challenge, developed based on the provided Figma design. The project showcases the skills and knowledge acquired during the challenge.
                     </p>
                   <ul class="keywords list-horizontal">
                       <li>responsive layout</li><li>fluid design</li>
